# sifirai-coming-soon

./: .gitattributes  .gitignore  Cargo.toml  Makefile.toml  README.md
src/: main.rs
static/assets/css/: style.css
templates/: hello.html  index.html
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/api/: evalCommands.ts
web/src/helpers/: dom.ts  events.ts  help.ts  history.ts  tree.ts
web/src/types/: terminal.ts
