[package]
name = "axum-askama-blog"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.6"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["fs", "set-header"] }
http = "1.3.1"
walkdir = "2.4.0"
tower-layer = "0.3.3"

